--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SCARF-UI PWA</title>
   </head>
 
-  <body class="flex flex-col min-h-screen mx-2 light:grainy antialiased">
+  <body class="flex flex-col min-h-screen h-full mx-2 light:grainy antialiased">
     <div id="root" class="flex flex-row justify-center"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
