--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#F2F2F2" />
     <link rel="manifest" href="manifest.json" />
     <title>SCARF-UI PWA</title>
   </head>
@@ -12,5 +12,4 @@
     <div id="root" class="flex flex-row justify-center"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
